# haiku6502

./: .gitignore  3-3-10-TFLiteOptimizations.ipynb  CMakeLists.txt  README.md
asm/: am_testrom.sh  asm.s  asm_rom.sh  calc_opval.py  check_bcd_mode.s  monitor.inc  opcodes_compressed.s  opmodes.txt  orig_monitor_rom.s  rom.s  symbols.inc  unit_test_rom.s
asm/attic/: orig_monitor_rom.s  orig_symbols.inc
data/: check_bcd_mode_0800.ram  standard.rom  test.rom  unit_test.rom
doc/: check_bcd_mode_0800.lst  feedasm  standard_rom.lst  test.asm
include/haiku6502/: CMakeLists.txt  cpu.h  device.h  engine.h  memory.h  peripheral.h  setup.h  slot0_peripheral.h  terminal.h
src/: CMakeLists.txt  REFERENCE.md  cpu.cpp  engine.cpp  main.cpp  memory.cpp  setup.cpp  slot0_peripheral.cpp  terminal.cpp
test/: CMakeLists.txt  test.cpp
